ProjetCompil/Verif/Test/fail/typeNonCompatible8.cas
program
	A : array [1..14] of boolean;
	B : boolean;
	C : boolean;
begin
	C := B and A;
end.
	
